package com.pseandroid2.dailydata.remoteDataSource.ServerConnection

class ServerManager {
}