package com.pseandroid2.dailydata.remoteDataSource.UserManager

//package com.google.firebase.quickstart.auth.kotlin
//import com.google.firebase.auth.FirebaseAuth

class FirebaseManager {
    //private lateinit var auth: FirebaseAuth
}