package com.pseandroid2.dailydata.remoteDataSource.queue

interface FetchRequestQueueObserver {
    fun update()
}