package com.pseandroid2.dailydata.remoteDataSource.queue

interface ProjectCommandQueueObserver {
    fun update()
}