package com.pseandroid2.dailydata.remoteDataSource.serverConnection

class RESTAPI {
}